Bug 15358 - shadow_copy2 and streams_depot don't play well together
Summary: shadow_copy2 and streams_depot don't play well together
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-14 16:54 UTC by Volker Lendecke
Modified: 2023-05-11 07:12 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.18 (5.08 KB, patch)
2023-04-18 07:45 UTC, Volker Lendecke
slow: review+
Details
Patch for 4.17 (1.90 KB, patch)
2023-04-18 07:52 UTC, Volker Lendecke
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2023-04-14 16:54:08 UTC
have patch, need bugnumber
Comment 1 Samba QA Contact 2023-04-17 18:12:05 UTC
This bug was referenced in samba master:

0327334c89cfda9020c6044a7b2b182138e46d03
526f381f413d1cb5cde93b9542034f5ebfcfcc10
Comment 2 Volker Lendecke 2023-04-18 07:45:44 UTC
Created attachment 17868 [details]
Patch for 4.18
Comment 3 Volker Lendecke 2023-04-18 07:52:16 UTC
Created attachment 17869 [details]
Patch for 4.17

Not backporting the test, the python file structure has changed.
Comment 4 Ralph Böhme 2023-04-18 11:45:34 UTC
Reassigning to Jule for inclusion in 4.17 and 4.18.
Comment 5 Jule Anger 2023-04-18 15:21:04 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 6 Samba QA Contact 2023-04-18 16:23:12 UTC
This bug was referenced in samba v4-17-test:

f53ef993ffc22a470b3cb7a0430e3e6093398f19
Comment 7 Samba QA Contact 2023-04-18 19:07:03 UTC
This bug was referenced in samba v4-18-test:

a377bd611023ad75046e697804126b78e923d62b
10ec0699aedd59e2ed957ecfeb96075ab9f66345
Comment 8 Jule Anger 2023-04-19 10:04:52 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2023-04-19 10:24:45 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.2):

a377bd611023ad75046e697804126b78e923d62b
10ec0699aedd59e2ed957ecfeb96075ab9f66345
Comment 10 Samba QA Contact 2023-05-11 07:12:16 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.8):

f53ef993ffc22a470b3cb7a0430e3e6093398f19